[project]
name = "lunarml-docs"
version = "0.1.0"
description = "The documentation of LunarML"
authors = [
    { name = "ARATA Mizuki", email = "minorinoki@gmail.com" }
]
dependencies = [
    "sphinx-rtd-theme>=2.0.0",
    "sphinx==7.*",
]
requires-python = ">= 3.8"

[tool.uv]
managed = true
package = false
